--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,31 @@
 version: '3.1'
 services:
   stats-server:
+    build: stats-service/
+    image: "server"
+    container_name: server
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/explorewithme
+      - POSTGRES_USER=dmitriydemintsev
+      - POSTGRES_PASSWORD=root
 
   stats-db:
-    image: postgres:14-alpine
-
-  ewm-service:
+    image: postgres:16.1
+    container_name: explorewithme
     ports:
-      - "8080:8080"
+      - "6542:5432"
+    environment:
+      - POSTGRES_DB=explorewithme
+      - POSTGRES_USER=dmitriydemintsev
+      - POSTGRES_PASSWORD=root
 
-  ewm-db:
-    image: postgres:14-alpine
+#  ewm-service:
+#    ports:
+#      - "8080:8080"
+#
+#  ewm-db:
+#    image: postgres:16.1
