--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8080
 
-stats-server.url=http://localhost:9090
+stats-service.url=http://localhost:9090
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/${db.name}
 spring.datasource.username=dmitriydemintsev
 spring.datasource.password=root
 
-db.name=ewmService
+db.name=ewmservice
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
