--- a/stats/stats-client/pom.xml
+++ b/stats/stats-client/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>common-dto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
