--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   stats-server:
-    build: stats-service/
+    build: stats/stats-service/
     image: "server"
     container_name: server
     ports:
@@ -32,7 +32,7 @@ services:
     depends_on:
       - ewm-db
     environment:
-      - STATS_SERVER_URL=http://stats-server:9090
+      - STATS_SERVICE_URL=http://stats-server:9090
       - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewmService
       - SPRING.DATASOURCE.USERNAME=dmitriydemintsev
       - SPRING.DATASOURCE.PASSWORD=root
