--- a/stats/stats-service/src/main/resources/application.properties
+++ b/stats/stats-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#stats/stats-service
+
 server.port=9090
 
 spring.datasource.driverClassName=org.postgresql.Driver
@@ -12,5 +14,7 @@ spring.sql.init.mode=always
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.jpa.show-sql=true
+
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+
