--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -16,24 +16,29 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <querydsl-apt.version>5.0.0</querydsl-apt.version>
+        <querydsl-jpa.version>5.0.0</querydsl-jpa.version>
+        <stats-client.version>0.0.1-SNAPSHOT</stats-client.version>
+        <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
+        <stats-service.version>0.0.1-SNAPSHOT</stats-service.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
-            <version>5.0.0</version>
+            <version>${querydsl-apt.version}</version>
         </dependency>
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
-            <version>5.0.0</version>
+            <version>${querydsl-jpa.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>stats-client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${stats-client.version}</version>
         </dependency>
 
         <dependency>
@@ -82,7 +87,7 @@
         <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
-            <version>2.0.2</version>
+            <version>${jakarta.validation-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -91,7 +96,7 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>stats-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${stats-service.version}</version>
             <scope>compile</scope>
         </dependency>
 
